[package]
name = "gio"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["glib", "gio", "gtk-rs", "gnome"]
readme = "README.md"
documentation = "https://gtk-rs.org/docs/gio/"
version = "0.13.0"
description = "Rust bindings for the Gio library"
repository = "https://github.com/gtk-rs/gtk-rs"
build = "build.rs"
exclude = [
    "gir-files/*",
]
edition = "2018"

[lib]
name = "gio"

[features]
v2_44 = ["ffi/v2_44", "glib/v2_44"]
v2_46 = ["v2_44", "ffi/v2_46", "glib/v2_46"]
v2_48 = ["v2_46", "ffi/v2_48", "glib/v2_48"]
v2_50 = ["v2_48", "ffi/v2_50", "glib/v2_50"]
v2_52 = ["v2_50", "ffi/v2_52", "glib/v2_52"]
v2_54 = ["v2_52", "ffi/v2_54", "glib/v2_54"]
v2_56 = ["v2_54", "ffi/v2_56", "glib/v2_56"]
v2_58 = ["v2_56", "ffi/v2_58", "glib/v2_58"]
v2_60 = ["v2_58", "ffi/v2_60", "glib/v2_60"]
v2_62 = ["v2_60", "ffi/v2_62", "glib/v2_62"]
v2_64 = ["v2_62", "ffi/v2_64", "glib/v2_64"]
v2_66 = ["v2_64", "ffi/v2_66", "glib/v2_66"]
dox = ["ffi/dox", "glib/dox"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1"
optional = true
git = "https://github.com/gtk-rs/lgpl-docs"

[dependencies]
libc = "0.2"
bitflags = "1.0"
once_cell = "1.0"
futures-core = "0.3"
futures-channel = "0.3"
futures-io = "0.3"
ffi = { package = "gio-sys", path = "sys" }
glib = { path = "../glib" }
thiserror = "1"

[dev-dependencies]
futures-util = { version = "0.3", features = ["io"] }
gir-format-check = "^0.1"
serial_test = "0.5"

[[test]]
name = "futures"
path = "tests/futures.rs"
edition = "2018"
# Defining one [[test]] disable test targets auto discovery =
# TODO: remove once crate has been ported to 2018 and tests/futures.rs removed =

[[test]]
name = "std_io_copy"
path = "tests/std_io_copy.rs"

[[test]]
name = "check_gir"
path = "tests/check_gir.rs"
