[package]
name = "glib-macros"
documentation = "http://gtk-rs.org/docs/glib-macros/"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
description = "Rust bindings for the GLib library, proc macros crate"
version = "0.9.0"
keywords = ["glib", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/glib"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1"
heck = "0.3"
itertools = "0.8"
proc-macro-error = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true

[dev-dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
