[package]
name = "glib-macros"
documentation = "http://gtk-rs.org/docs/glib-macros/"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
description = "Rust bindings for the GLib library, proc macros crate"
version = "0.10.0"
keywords = ["glib", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/glib"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1"
heck = "0.3"
itertools = "0.9"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
proc-macro-crate = "0.1"

[lib]
proc-macro = true

[dev-dependencies]
glib = { path = ".." }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
