[package]
name = "glib-macros"
documentation = "https://gtk-rs.org/docs/glib-macros/"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
description = "Rust bindings for the GLib library, proc macros crate"
version = "0.13.0"
keywords = ["glib", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk-rs"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1"
heck = "0.3"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro-crate = "0.1"

[lib]
proc-macro = true

[dev-dependencies]
glib = { path = "../glib" }
