[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"
bitflags = "0.9"

[features]
v2_46 = ["v2_44"]
v2_34 = []
v2_44 = ["v2_40"]
v2_40 = ["v2_38"]
v2_48 = ["v2_46"]
v2_50 = ["v2_48"]
v2_38 = ["v2_36"]
v2_36 = ["v2_34"]

[lib]
name = "glib_sys"

[package]
name = "glib-sys"
license = "MIT"
homepage = "http://gtk-rs.org/"
links = "glib"
authors = ["The Gtk-rs Project Developers"]
description = "FFI bindings to libglib-2.0"
version = "0.4.0"
keywords = ["glib", "ffi", "gtk-rs", "gnome"]
repository = "https://github.com/gtk-rs/sys"
build = "build.rs"