[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v2_44 = []
v2_46 = ["v2_44"]
v2_48 = ["v2_46"]
v2_50 = ["v2_48"]
v2_52 = ["v2_50"]
v2_54 = ["v2_52"]
v2_56 = ["v2_54"]
v2_58 = ["v2_56"]
v2_60 = ["v2_58"]
dox = []

[lib]
name = "glib_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libglib-2.0"
homepage = "http://gtk-rs.org/"
keywords = ["glib", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "glib"
name = "glib-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.9.0"

["package.metadata.docs.rs"]
features = ["dox", "v2_60"]
