[package]
name = "glib"
documentation = "https://gtk-rs.org/docs/glib/"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
description = "Rust bindings for the GLib library"
readme = "README.md"
version = "0.13.0"
keywords = ["glib", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk-rs"
license = "MIT"
exclude = [
    "gir-files/*",
]
edition = "2018"

[lib]
name = "glib"

[dependencies]
once_cell = "1.0"
libc = "0.2"
bitflags = "1.0"
futures-core = "0.3"
futures-task = "0.3"
futures-executor = "0.3"
futures-channel = "0.3"
ffi = { package = "glib-sys", path = "sys" }
gobject_ffi = { package = "gobject-sys", path = "gobject-sys" }
glib-macros = { path = "../glib-macros" }
rs-log = { package = "log", version = "0.4", optional = true }
smallvec = "1.0"

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"

[features]
v2_44 = ["ffi/v2_44", "gobject_ffi/v2_44"]
v2_46 = ["v2_44", "ffi/v2_46", "gobject_ffi/v2_46"]
v2_48 = ["v2_46", "ffi/v2_48"]
v2_50 = ["v2_48", "ffi/v2_50"]
v2_52 = ["v2_50", "ffi/v2_52"]
v2_54 = ["v2_52", "ffi/v2_54", "gobject_ffi/v2_54"]
v2_56 = ["v2_54", "ffi/v2_56"]
v2_58 = ["v2_56", "ffi/v2_58", "gobject_ffi/v2_58"]
v2_60 = ["v2_58", "ffi/v2_60"]
v2_62 = ["v2_60", "ffi/v2_62", "gobject_ffi/v2_62"]
v2_64 = ["v2_62", "ffi/v2_64"]
v2_66 = ["v2_64", "ffi/v2_66"]
v2_68 = ["v2_66", "ffi/v2_68"]
log = ["rs-log"]
log_macros = ["log"]
dox = ["ffi/dox", "gobject_ffi/dox", "log_macros"]

[package.metadata.docs.rs]
features = ["dox"]
