[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
default = ["v1_10"]
v1_10 = []
dox = []

[lib]
name = "graphene_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgraphene-1.0"
homepage = "http://gtk-rs.org/"
keywords = ["graphene", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "graphene"
name = "graphene-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.1.0"
