[build-dependencies]
pkg-config = "0.3.7"
system-deps = "1.3"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
default = ["v1_10"]
v1_10 = []
dox = []

[lib]
name = "graphene_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgraphene-1.0"
homepage = "https://gtk-rs.org/"
keywords = ["graphene", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "graphene"
name = "graphene-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.1.0"
link = "graphene-1.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.graphene_gobject_1_0]
name = "graphene-gobject-1.0"
version = "1.9.2"

[package.metadata.system-deps.graphene_gobject_1_0.feature-versions]
v1_10 = "1.10"
