[package]
name = "graphene-rs"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["graphene", "graphene-rs", "gtk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/docs/graphene/"
version = "0.13.0"
description = "Rust bindings for the Graphene library"
repository = "https://github.com/gtk-rs/gtk-rs"
exclude = [
    "gir-files/*",
]
edition = "2018"

[lib]
name = "graphene"

[features]
default = ["v1_10"]
v1_10 = ["ffi/v1_10"]
dox = ["ffi/dox", "glib/dox"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
glib = { path = "../glib" }
ffi = { package = "graphene-sys", path = "sys" }

[dev-dependencies]
gir-format-check = "^0.1"
