[package]
name = "gtk-sys"
version = "0.10.0"
links = "gtk"
build = "build.rs"
authors = ["The Gtk-rs Project Developers"]
description = "FFI bindings to libgtk-3"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
repository = "https://github.com/gtk-rs/sys"

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps."gtk+_3_0"]
name = "gtk+-3.0"
version = "3.14"

[package.metadata.system-deps."gtk+_3_0".feature-versions]
v3_16 = "3.16"
v3_18 = "3.18"
v3_20 = "3.20"
v3_22 = "3.22"
v3_22_6 = "3.22.6"
v3_22_26 = "3.22.26"
v3_22_27 = "3.22.27"
v3_22_29 = "3.22.29"
v3_22_30 = "3.22.30"
v3_24 = "3.24"
v3_24_8 = "3.24.8"
v3_24_9 = "3.24.9"

[lib]
name = "gtk_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.atk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v3_24_11 = ["v3_24_9"]
v3_16 = []
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_22_6 = ["v3_22"]
v3_22_26 = ["v3_22_6"]
v3_22_27 = ["v3_22_26"]
v3_22_29 = ["v3_22_27"]
v3_22_30 = ["v3_22_29"]
v3_24 = ["v3_22_30"]
v3_24_8 = ["v3_24"]
v3_24_9 = ["v3_24_8"]
dox = []
