[package]
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gtk/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the GTK+ 3 library"
name = "gtk"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
readme = "README.md"
version = "0.16.2"
keywords = ["gtk", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk3-rs"
build = "build.rs"
exclude = ["gir-files/*"]
edition = "2021"
rust-version = "1.63"

[lib]
name = "gtk"

[features]
v3_24 = ["ffi/v3_24"]
v3_24_1 = ["v3_24", "ffi/v3_24_1"]
v3_24_8 = ["v3_24_1", "ffi/v3_24_8"]
v3_24_9 = ["v3_24_8", "ffi/v3_24_9"]
v3_24_11 = ["v3_24_9", "ffi/v3_24_11"]
v3_24_30 = ["v3_24_11", "ffi/v3_24_30"]
dox = [
    "ffi/dox",
    "atk/dox",
    "cairo-rs/dox",
    "gio/dox",
    "glib/dox",
    "gdk/dox",
    "gdk-pixbuf/dox",
    "pango/dox",
]
gio_v2_58 = ["gio/v2_58"]
unsafe-assume-initialized = []

[package.metadata.docs.rs]
features = ["dox"]

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"
bitflags = "1.0"
field-offset = "0.3"
futures-channel = "0.3"
once_cell = "1.0"
atk = { path = "../atk", version = "0.16" }
ffi = { package = "gtk-sys", path = "sys", version = "0.16" }
gtk3-macros = { path = "../gtk3-macros", version = "0.16" }
cairo-rs = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16" }
gio = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16" }
glib = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16" }
gdk = { path = "../gdk", version = "0.16" }
gdk-pixbuf = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16" }
pango = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16" }

[dev-dependencies]
gir-format-check = "^0.1"
