[package]
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gtk/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the GTK+ 3 library"
name = "gtk"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
readme = "README.md"
version = "0.18.0"
keywords = ["gtk", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk3-rs"
build = "build.rs"
exclude = ["gir-files/*"]
edition = "2021"
rust-version = "1.65"

[lib]
name = "gtk"

[features]
v3_24 = ["ffi/v3_24"]
v3_24_1 = ["v3_24", "ffi/v3_24_1"]
v3_24_8 = ["v3_24_1", "ffi/v3_24_8"]
v3_24_9 = ["v3_24_8", "ffi/v3_24_9"]
v3_24_11 = ["v3_24_9", "ffi/v3_24_11"]
v3_24_30 = ["v3_24_11", "ffi/v3_24_30"]
gio_v2_58 = ["gio/v2_58"]
unsafe-assume-initialized = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"
field-offset = "0.3"
futures-channel = "0.3"
atk = { path = "../atk" }
ffi = { package = "gtk-sys", path = "sys" }
gtk3-macros = { path = "../gtk3-macros" }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gdk = { path = "../gdk" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gtk-rs-core" }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[dev-dependencies]
gir-format-check = "^0.1"
