[package]
documentation = "https://gtk-rs.org/docs/gtk3-macros/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the GTK 3 library"
homepage = "https://gtk-rs.org/"
name = "gtk3-macros"
version = "0.1.0"
authors = ["The Gtk-rs Project Developers"]
edition = "2018"
keywords = ["gtk", "gtk3", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk-rs"
exclude = [
    "gir-files/*",
]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
heck = "0.3"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
proc-macro-crate = "0.1"
