[package]
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gtk3_macros/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the GTK 3 library"
homepage = "https://gtk-rs.org/"
name = "gtk3-macros"
version = "0.15.6"
authors = ["The gtk-rs Project Developers"]
edition = "2021"
keywords = ["gtk", "gtk3", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk3-rs"
exclude = [
    "gir-files/*",
    "src/composite_template.ui"
]
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro-crate = "1.0"

[dev-dependencies]
gtk = { path = "../gtk" }
