[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"
version = "0.6.0"

[dependencies.gobject-sys]
path = "../gobject-sys"
version = "0.6.0"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v1_31 = []
v1_32 = ["v1_31"]
v1_32_4 = ["v1_32"]
v1_34 = ["v1_32_4"]
v1_36_7 = ["v1_34"]
v1_38 = ["v1_36_7"]
v1_42 = ["v1_38"]

[lib]
name = "pango_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libpango-1.0"
homepage = "http://gtk-rs.org/"
keywords = ["pango", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "pango"
name = "pango-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.6.0"
