[package]
name = "pango"
documentation = "https://gtk-rs.org/docs/pango/"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["pango", "gtk-rs", "gnome"]
readme = "README.md"
version = "0.9.0"
description = "Rust bindings for the Pango library"
repository = "https://github.com/gtk-rs/gtk-rs"
license = "MIT"
exclude = [
    "gir-files/*",
]

[features]
v1_38 = ["pango-sys/v1_38"]
v1_40 = ["v1_38"]
v1_42 = ["v1_40", "pango-sys/v1_42"]
v1_44 = ["v1_42", "pango-sys/v1_44"]
v1_46 = ["v1_44", "pango-sys/v1_46"]
dox = ["pango-sys/dox", "glib/dox"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1"
optional = true
git = "https://github.com/gtk-rs/lgpl-docs"

[dependencies]
libc = "0.2"
bitflags = "1.0"
once_cell = "1.0"
pango-sys = { path = "../pango/sys" }
glib = { path = "../glib" }
glib-sys = { path = "../glib/sys" }
gobject-sys = { path = "../glib/gobject-sys" }

[dev-dependencies]
gir-format-check = "^0.1"
