[package]
name = "pango"
documentation = "https://gtk-rs.org/docs/pango/"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["pango", "gtk-rs", "gnome"]
readme = "README.md"
version = "0.13.0"
description = "Rust bindings for the Pango library"
repository = "https://github.com/gtk-rs/gtk-rs"
license = "MIT"
exclude = [
    "gir-files/*",
]
edition = "2018"

[features]
v1_38 = ["ffi/v1_38"]
v1_40 = ["v1_38"]
v1_42 = ["v1_40", "ffi/v1_42"]
v1_44 = ["v1_42", "ffi/v1_44"]
v1_46 = ["v1_44", "ffi/v1_46"]
dox = ["ffi/dox", "glib/dox"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
once_cell = "1.0"
ffi = { package = "pango-sys", path = "sys" }
glib = { path = "../glib" }

[dev-dependencies]
gir-format-check = "^0.1"
