[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"
version = "0.6.0"

[dependencies.glib-sys]
path = "../glib-sys"
version = "0.6.0"

[dependencies.pango-sys]
path = "../pango-sys"
version = "0.6.0"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []

[lib]
name = "pango_cairo_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgtk-3"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "pango_cairo"
name = "pangocairo-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.7.0"
