[package]
name = "pangocairo"
documentation = "https://gtk-rs.org/docs/pangocairo/"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["pango", "cairo", "gtk-rs", "gnome"]
readme = "README.md"
version = "0.10.0"
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/gtk-rs/gtk-rs"
license = "MIT"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[features]
dox = ["glib/dox", "pango/dox", "cairo-rs/dox"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/embed-lgpl-docs"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1"
optional = true
git = "https://github.com/gtk-rs/lgpl-docs"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib-sys = { path = "../glib/sys" }
gobject-sys = { path = "../glib/gobject-sys" }
pango-sys = { path = "../pango/sys" }
cairo-sys-rs = { path = "../cairo/sys" }
pangocairo-sys = { path = "../pangocairo/sys" }
glib = { path = "../glib" }
pango = { path = "../pango" }
cairo-rs = { path = "../cairo" }

[dev-dependencies]
gir-format-check = "^0.1"
