[package]
name = "pangocairo"
documentation = "https://gtk-rs.org/docs/pangocairo/"
homepage = "https://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["pango", "cairo", "gtk-rs", "gnome"]
readme = "README.md"
version = "0.13.0"
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/gtk-rs/gtk-rs"
license = "MIT"
exclude = [
    "gir-files/*",
]
edition = "2018"

[features]
dox = ["glib/dox", "pango/dox", "cairo-rs/dox"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
ffi = { package = "pangocairo-sys", path = "sys" }
glib = { path = "../glib" }
pango = { path = "../pango" }
cairo-rs = { path = "../cairo" }

[dev-dependencies]
gir-format-check = "^0.1"
