[build-dependencies]
system-deps = "3"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
version = "0.14.0"

[dependencies.gobject-sys]
version = "0.14.0"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_30 = []
v2_32 = ["v2_30"]
v2_34 = ["v2_32"]
dox = []

[lib]
name = "atk_sys"

[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libatk-1"
homepage = "http://gtk-rs.org/"
keywords = ["atk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "atk-1.0"
name = "atk-sys"
repository = "https://github.com/gtk-rs/gtk3-rs"
version = "0.14.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.atk]
name = "atk"
version = "2.18"

[package.metadata.system-deps.atk.v2_30]
version = "2.30"

[package.metadata.system-deps.atk.v2_32]
version = "2.32"

[package.metadata.system-deps.atk.v2_34]
version = "2.34"
